[metadata]
name = anycast-healthchecker
author = Pavlos Parissis
author-email = pavlos.parissis@booking.com
summary = A healthchecker for Anycasted Services
license = Propietary
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: Other/Proprietary License
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Topic :: System :: Monitoring
        Topic :: Utilities
requires-dist =
    python-daemon
keywords =
    healthchecker
    anycast

[files]
packages =
    anycast_healthchecker
data_files =
    /etc/sysconfig/anycast-healthchecker = anycast-healthchecker.sysconfig

[entry_points]
console_scripts =
     anycast-healthchecker = anycast_healthchecker.main:main
