[metadata]
name = anycast-healthchecker
author = Pavlos Parissis
author-email = pavlos.parissis@gmail.com
summary = A healthchecker for Anycasted Services
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Topic :: System :: Monitoring
        Topic :: Utilities
requires-dist =
    python-daemon
keywords =
    healthchecker
    anycast

[files]
packages =
    anycast_healthchecker

[entry_points]
console_scripts =
     anycast-healthchecker = anycast_healthchecker.main:main
